# chrx-design

./: .gitignore  README.md
chrx/: README.md
chrx/bridge/: README.md
chrx/bridge/POC/: .gitignore  Makefile  README.md
chrx/bridge/POC/bridge/: Cargo.toml  build.rs
chrx/bridge/POC/bridge/src/: lib.rs
chrx/bridge/POC/cpp/: .gitignore  CMakeLists.txt  Makefile  StartupData.hpp  main.cpp  utils.cpp
chrx/server/: README.md
roadmap/: README.md
